# openglopenxr

./: .gitignore  CMakeLists.txt  GLSLShader.cpp  openxrOptix.cpp  openxrOptix.h
shaders/: simple.fragment.glsl  simple.vertex.glsl
